--- a/DeliveryFoodSystem/nbproject/private/private.properties
+++ b/DeliveryFoodSystem/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\tanaw\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+user.properties.file=C:\\Users\\tein1\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
