--- a/DeliveryFoodSystem/nbproject/project.properties
+++ b/DeliveryFoodSystem/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DeliveryFoodSystem
 excludes=
+file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\tein1\\Desktop\\Compro-Project\\mysql-connector-java-8.0.19\\mysql-connector-java-8.0.19.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=DeliveryFoodSystem
-main.class=deliveryfoodsystem.DeliveryFoodSystem
+main.class=DBservice.DatabaseSystem
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
