--- a/DeliveryFoodSystem/nbproject/private/private.properties
+++ b/DeliveryFoodSystem/nbproject/private/private.properties
@@ -1,2 +1,2 @@
-file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\tanaw\\Downloads\\mysql-connector-java-8.0.19\\mysql-connector-java-8.0.19.jar
-user.properties.file=C:\\Users\\tanaw\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\tein1\\Desktop\\Compro-Project\\mysql-connector-java-8.0.19
+user.properties.file=C:\\Users\\tein1\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
