--- a/DeliveryFoodSystem/nbproject/project.properties
+++ b/DeliveryFoodSystem/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/DeliveryFoodSystem
 excludes=
 file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\tein1\\Desktop\\Compro-Project\\mysql-connector-java-8.0.19\\mysql-connector-java-8.0.19.jar
 file.reference.mysql-connector-java-8.0.19.jar-1=C:\\Users\\tein1\\Desktop\\Compro-Project\\mysql-connector-java-8.0.19\\mysql-connector-java-8.0.19.jar
+file.reference.mysql-connector-java-8.0.19.jar-2=C:\\Users\\tein1\\Desktop\\Compro-Project\\mysql-connector-java-8.0.19\\mysql-connector-java-8.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.19.jar}:\
-    ${file.reference.mysql-connector-java-8.0.19.jar-1}
+    ${file.reference.mysql-connector-java-8.0.19.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.19.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
