--- a/DeliveryFoodSystem/nbproject/private/private.properties
+++ b/DeliveryFoodSystem/nbproject/private/private.properties
@@ -1,2 +1,7 @@
+compile.on.save=false
+do.depend=false
+do.jar=true
 file.reference.mysql-connector-java-8.0.19.jar-2=C:\\Users\\tanaw\\Downloads\\mysql-connector-java-8.0.19\\mysql-connector-java-8.0.19.jar
-user.properties.file=C:\\Users\\tanaw\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\tein1\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
