--- a/DeliveryFoodSystem/nbproject/project.properties
+++ b/DeliveryFoodSystem/nbproject/project.properties
@@ -79,7 +79,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=DeliveryFoodSystem
-main.class=DBservice.DatabaseSystem
+main.class=FoodDeliverySystem
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
